Adicionando o script.js

--- a/DrumKit/index.html
+++ b/DrumKit/index.html
@@ -5,30 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drum Kit</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onkeypress="keyEvent(event);">
     <div class="keys">
-        <div class="box" id="A" onclick="clickEvent()"><h1>A</h1><P>CLAP</P></div>
-        <div class="box" id="S" onclick="clickEvent()"><h1>S</h1><P>HIHAT</P></div>
-        <div class="box" id="D" onclick="clickEvent()"><h1>D</h1><P>KICK</P></div>
-        <div class="box" id="F" onclick="clickEvent()"><h1>F</h1><P>OPENHAT</P></div>
-        <div class="box" id="G" onclick="clickEvent()"><h1>G</h1><P>BOOM</P></div>
-        <div class="box" id="H" onclick="clickEvent()"><h1>H</h1><P>RIDE</P></div>
-        <div class="box" id="J" onclick="clickEvent()"><h1>J</h1><P>SNARE</P></div>
-        <div class="box" id="K" onclick="clickEvent()"><h1>K</h1><P>TOM</P></div>
-        <div class="box" id="L" onclick="clickEvent()"><h1>L</h1><P>TINK</P></div>
+        <div class="box" id="A" onclick="clickEvent(97)"><h1>A</h1><P>CLAP</P></div>
+        <div class="box" id="S" onclick="clickEvent(115)"><h1>S</h1><P>HIHAT</P></div>
+        <div class="box" id="D" onclick="clickEvent(100)"><h1>D</h1><P>KICK</P></div>
+        <div class="box" id="F" onclick="clickEvent(102)"><h1>F</h1><P>OPENHAT</P></div>
+        <div class="box" id="G" onclick="clickEvent(103)"><h1>G</h1><P>BOOM</P></div>
+        <div class="box" id="H" onclick="clickEvent(104)"><h1>H</h1><P>RIDE</P></div>
+        <div class="box" id="J" onclick="clickEvent(106)"><h1>J</h1><P>SNARE</P></div>
+        <div class="box" id="K" onclick="clickEvent(107)"><h1>K</h1><P>TOM</P></div>
+        <div class="box" id="L" onclick="clickEvent(108)"><h1>L</h1><P>TINK</P></div>
        
     </div>
 
-<audio data-key="65" src="sounds/clap.wav"></audio>
-<audio data-key="83" src="sounds/hihat.wav"></audio>
-<audio data-key="68" src="sounds/kick.wav"></audio>
-<audio data-key="70" src="sounds/openhat.wav"></audio>
-<audio data-key="71" src="sounds/boom.wav"></audio>
-<audio data-key="72" src="sounds/ride.wav"></audio>
-<audio data-key="74" src="sounds/snare.wav"></audio>
-<audio data-key="75" src="sounds/tom.wav"></audio>
-<audio data-key="76" src="sounds/tink.wav"></audio>
+
+
+<script src="script.js">s</script>
 
 </body>
 </html>
