--- a/DrumKit/index.html
+++ b/DrumKit/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css"/>
     <title>Drum Kit</title>
    
 </head>
 <body onkeypress="keyEvent(event);">
-    
+
     <div class="keys">
         <div class="box" id="A" ><h1>A</h1><P>CLAP</P></div>
         <div class="box" id="S" ><h1>S</h1><P>HIHAT</P></div>
@@ -25,6 +26,7 @@
 
 
 <script src="script.js">s</script>
+
 
 </body>
 </html>
