--- a/DrumKit/index.html
+++ b/DrumKit/index.html
@@ -11,7 +11,7 @@
 <body onkeypress="keyEvent(event);">
 
     <div class="keys">
-        <div class="box" id="A" ><h1>A</h1><P>CLAP</P></div>
+        <div class="box" id="A" ><h1 class="title">A</h1><P>CLAP</P></div>
         <div class="box" id="S" ><h1>S</h1><P>HIHAT</P></div>
         <div class="box" id="D" ><h1>D</h1><P>KICK</P></div>
         <div class="box" id="F" ><h1>F</h1><P>OPENHAT</P></div>
