mudança de nome na class

--- a/01-DrumKit/index.html
+++ b/01-DrumKit/index.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
+
+
     <title>Drum Kit</title>
-   
+
 </head>
+
 <body onkeypress="keyEvent(event);">
 
-    <div class="keys">
-        <div class="box" id="A" ><h1 class="title">A</h1><P>CLAP</P></div>
-        <div class="box" id="S" ><h1>S</h1><P>HIHAT</P></div>
-        <div class="box" id="D" ><h1>D</h1><P>KICK</P></div>
-        <div class="box" id="F" ><h1>F</h1><P>OPENHAT</P></div>
-        <div class="box" id="G" ><h1>G</h1><P>BOOM</P></div>
-        <div class="box" id="H" ><h1>H</h1><P>RIDE</P></div>
-        <div class="box" id="J" ><h1>J</h1><P>SNARE</P></div>
-        <div class="box" id="K" ><h1>K</h1><P>TOM</P></div>
-        <div class="box" id="L" ><h1>L</h1><P>TINK</P></div>
-       
+    <div class="container">
+        <div class="box" id="A">
+            <h1 class="title">A</h1>
+            <P>CLAP</P>
+        </div>
+        <div class="box" id="S">
+            <h1>S</h1>
+            <P>HIHAT</P>
+        </div>
+        <div class="box" id="D">
+            <h1>D</h1>
+            <P>KICK</P>
+        </div>
+        <div class="box" id="F">
+            <h1>F</h1>
+            <P>OPENHAT</P>
+        </div>
+        <div class="box" id="G">
+            <h1>G</h1>
+            <P>BOOM</P>
+        </div>
+        <div class="box" id="H">
+            <h1>H</h1>
+            <P>RIDE</P>
+        </div>
+        <div class="box" id="J">
+            <h1>J</h1>
+            <P>SNARE</P>
+        </div>
+        <div class="box" id="K">
+            <h1>K</h1>
+            <P>TOM</P>
+        </div>
+        <div class="box" id="L">
+            <h1>L</h1>
+            <P>TINK</P>
+        </div>
+
     </div>
 
-
-
-<script src="script.js">s</script>
-
+    <script src="script.js"></script>
 
 </body>
+
 </html>
